# pokemon-infinity

./: .gitignore  CMakeLists.txt  README.md  charmap.txt
.github/workflows/: build.yml
asm/macros/: event.inc
data/: battle_scripts_1.s  event_scripts.s  specials.inc
data/scripts/: berry_blender.inc  berry_tree.inc  contest_hall.inc  day_care.inc  debug.inc  field_move_scripts.inc  gift_mystic_ticket.inc  gift_old_sea_map.inc  gift_pichu.inc  mauville_man.inc  pkmn_center_nurse.inc  roulette.inc  safari_zone.inc  secret_base.inc  secret_power_tm.inc  shared_secret_base.inc
data/text/: apprentice.inc  battle_dome.inc  battle_tent.inc  berries.inc  birch_speech.inc  blend_master.inc  braille.inc  cable_club.inc  check_furniture.inc  contest_painting.inc  event_ticket_1.inc  event_ticket_2.inc  lottery_corner.inc  match_call.inc  mauville_man.inc  move_tutors.inc  pc.inc  pc_transfer.inc  pkmn_center_nurse.inc  pokedex_rating.inc  pokemon_news.inc  questionnaire.inc  secret_base_trainers.inc  shoal_cave.inc  trainers.inc  tv.inc
gflib/: characters.h  string_util.c  string_util.h  text.c
include/: battle.h  battle_ai_util.h  battle_main.h  battle_scripts.h  battle_util.h  data.h  fpmath.h  global.h  graphics.h  item_use.h  level_caps.h  pokemon.h  strings.h
include/config/: battle.h  item.h  level_caps.h
include/constants/: abilities.h  battle_script_commands.h  battle_string_ids.h  cries.h  flags.h  global.h  hold_effects.h  item.h  items.h  pokemon.h  script_menu.h  species.h  spreads.h  tms_hms.h  trade.h  vars.h
sound/: cry_tables.inc  direct_sound_data.inc
src/: battle_ai_util.c  battle_main.c  battle_message.c  battle_script_commands.c  battle_util.c  contest.c  data.c  daycare.c  field_poison.c  item.c  item_menu.c  item_menu_icons.c  item_use.c  level_caps.c  load_save.c  main_menu.c  mystery_event_msg.c  overworld.c  party_menu.c  pokemon.c  scrcmd.c  strings.c  trade.c
test/: test_runner_battle.c
(+551 files in other folders)
